labour/test/invalid/rule_2_violation.labour
bouldering_wall "Wall2" {
  routes [ bouldering_route "Route1" { grade: "5A", grid_base_point { x: 0, y: 0 }, holds ["0001"] } ],
  volumes [ circle { pos: { x: 0, y: 0 }, depth: 10, radius: 50, front_holds [ hold "0001" { pos: { x: 0, y: 0 }, shape: "1", colours [white] } ] } ]
}